css/style.css
/* ... */
.nav-bg {
  background-image: linear-gradient(to top, #a1f2ec, #96e8e2, #8addd7, #7fd3cd, #74c9c3);
  height: 10vh;
}
.icon {
  max-width:35%;
}
#top-menu, #social-media {
    z-index: 1;
    left: 0;
    right: 0;
    top: 0;
}
#top-menu li, #social-media li {
    float: left;
    list-style-type: none;
}
#top-menu a {
  display: block;
  font-family: 'Raleway', sans-serif;
  margin: 25px 14px 0px 14px;
  text-align: center;
  -webkit-transition: .5s all ease-out;
  -moz-transition: .5s all ease-out;
  transition: .5s all ease-out;
  color: #ffffff;
  text-decoration: none;
  padding:2px 3px 2px 5px;
  -moz-border-radius: 3px;
  border-radius: 3px;
}
 #social-media a {
  display: block;
  font-family: 'Raleway', sans-serif;
  margin: 25px 14px 0px 14px;
  text-align: center;
  -webkit-transition: .5s all ease-out;
  -moz-transition: .5s all ease-out;
  transition: .5s all ease-out;
  color: #ffffff;
  text-decoration: none;
  padding:2px 3px 2px 5px;
  -moz-border-radius: 3px;
  border-radius: 3px;
}
#top-menu a:hover {
  color: #71baaa;
  text-decoration:none;
  font-weight:500;
  background-color:#ffffff;
  padding:2px 3px 2px 5px;
  -moz-border-radius: 3px;
  border-radius: 3px;
}
#top-menu li.active a {
  color: #71baaa;
  text-decoration:none;
  font-weight:500;
  background-color:#ffffff;
  padding:2px 3px 2px 5px;
  -moz-border-radius: 3px;
  border-radius: 3px;
}
#intro-text, .about-text {
  font-family: 'Montserrat', sans-serif;
  font-weight: 200;
  color: #fff;
  z-index: 5;
  padding: 1.5em 2.5em 0em 2em;
  margin-bottom: 0;
  line-height: 1.5em;
}
.accent-text {
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  color: #fff;
  padding: 0em 2.5em 2.5em 0em;
}
.code {
  font-family: 'Inconsolata', monospace;
  display: inline !important;
  color: #000 !important;
  padding:0 !important; margin:0 !important;
}
.code:hover {
  color: #7df94e !important;
}
.dynamo {
  font-size: 1.4em;
  z-index: 1 !important;
}
.scroll-icon {
  width: 25px;
  padding-top: 1vh;
  margin: 0 auto;
  cursor: pointer;
}
.textcontainer {
  padding: 4em 0 0 2em;
 }
.particletext {
  font-family: 'Montserrat', sans-serif;
  color: #fff;
  text-align: left;
  font-size: 1em;
  font-weight: 400;
  position: relative;
  text-transform:uppercase;
  letter-spacing: 1px;
}
.particletext.bubbles > .particle {
  opacity: 0;
  position: absolute;
  background-color: rgba(255, 255, 243, 0.5);
  animation: bubbles 3s ease-in infinite;
  border-radius: 100%;
}
@keyframes bubbles {
  0% {
    opacity: 0;
  }
  20% {
    opacity: 1;
    transform: translate(0, -20%);
  }
  100% {
    opacity: 0;
    transform: translate(0, -1000%);
  }
}

/* GALLERY */
#gallery {
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  padding-top: 30px;
}
.porthole {
 position: relative;
 display: inline-block;
 margin: 20px;
 max-width: 220px;
 width: 100%;
 color: #bbb;
 font-size: 16px;
 box-shadow: none !important;
 -webkit-transform: translateZ(0) !important;
 transform: translateZ(0);
}
.porthole *,
.porthole:before,
.porthole:after {
 -webkit-box-sizing: border-box;
 box-sizing: border-box;
 -webkit-transition: all 0.3s linear;
 transition: all 0.3s linear;
}
.porthole:before,
.porthole:after {
 border-radius: 50%;
 content: '';
 position: absolute;
 top: 0px;
 bottom: 0px;
 left: 0px;
 right: 0px;
 z-index: -1;
 border: 2px solid #fff;
 border-color: transparent #fff;
}
.porthole img {
  max-width: 100%;
  vertical-align: top;
  border-radius: 50%;
  padding: 10px;
  opacity: 0.8;
  -webkit-box-shadow: 0px 0px 0px 1px  rgba(255, 255, 255, 0.0);
/* Transparent box-shadow address bugginess on hover in Safari */
}
.porthole figcaption {
 position: absolute;
 top: 5px;
 bottom: 5px;
 left: 5px;
 right: 5px;
 opacity: 0;
 background-color: rgba(0, 0, 0, 0.6);
 border-radius: 50%;
}
.porthole figcaption p {
 padding-top:70px;
 color: #fff;
 text-align: center;
 font-size: 1.25em;
 font-family: 'Raleway', sans-serif;
}
.porthole a {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
}
.porthole:hover figcaption,
.porthole.hover figcaption {
 opacity: 1;
 -webkit-transform: translateX(0);
 transform: translateX(0);
 -ms-transform: translateX(0);
 -moz-transform: translateX(0);
  -o-transform: translateX(0);
}
.porthole:hover:before,
.porthole.hover:before {
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  -o-transform: rotate(45deg);
}
.porthole:hover:after,
.porthole.hover:after {
  -webkit-transform: rotate(-45deg);
  transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  -moz-transform: rotate(-45deg);
  -o-transform: rotate(-45deg);
}

/* MODALS */
.cocanvas-modal-overlay, .origame-modal-overlay, .tictac-modal-overlay, .burning-modal-overlay, .ph-modal-overlay {
  position: fixed;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
  display: none;
  z-index: 20;
}
.cocanvas-close, .origame-close, .tictac-close, .burning-close, .ph-close {
  float: right;
  margin-top: -10px;
  margin-right: -16px;
  z-index: 30 !important;
  background-color: #b8b8b8;
  border-radius: 50%;
  width: 28px;
  height: 28px;
  -webkit-transition: .2s all ease-out;
  -moz-transition: .2s all ease-out;
  transition: .2s all ease-out;
}
.cocanvas-close:hover, .origame-close:hover, .tictac-close:hover, .burning-close:hover, .ph-close:hover {
  background-color: #666;
}
.cross {
  margin-left: 4px;
  margin-top: 4px;
  width: 20px;
  height: 20px;
  fill: #fff;
}
footer {
  position: absolute;
  bottom: 10px !important;
  top: auto;
  width: 100%;
}
/* ... */

